# AnalyticsTGSubscribers

./: pyproject.toml  requirements.txt
core/: run_manage_py.sh  settings.py
core/apps/bot/: admin.py  apps.py  main_bot.py  models.py
core/apps/bot/migrations/: 0001_initial.py
core/apps/management/management/commands/: run_bot.py
