[tool.poetry]
name = "analyticstgsubscribers"
version = "0.1.0"
description = ""
authors = ["Stanislav Vologdin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
django-grappelli = "3.0.6"
environs = "9.5.0"
gunicorn = "20.1.0"
pyTelegramBotAPI = "4.10.0"
aiohttp = '*'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
